--- a/camp/src/app/main/main.component.html
+++ b/camp/src/app/main/main.component.html
@@ -1,1 +1,29 @@
-<p>main works!</p>
+<div class="grid">
+
+    <div class="upperHeader">
+        <p>ул.Лесная квартал 5 секция 9
+        </p>
+        <img class="logo" src="assets/images/logo.jpg">
+        <p>8-800-555-35-35</p>
+    </div>
+    <div class="menu">
+
+        <ul>
+            <li>
+                <a routerLink="">главная</a>
+            </li>
+            <li>
+                <a routerLink="about">о лагере</a>
+            </li>
+            <li>
+                <a routerLink="sqads">отряды</a>
+            </li>
+            <li>
+                <a routerLink="buy">забронировать</a>
+            </li>
+
+        </ul>
+
+    </div>
+</div>
+<router-outlet></router-outlet>
