--- a/camp/src/app/about/about.component.html
+++ b/camp/src/app/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<div class="grid-wrapper">
+    
+        <p>
+            В нашем лагере работают лучшие сертефицированные тренера. Каждый из них- профессионал в своём деле! Ваш ребёнок хорошо поладит с любым из них.
+        </p>
+        <img src="/assets/images/trainer.jpg">
+    
+    
+        <p>
+            В нашем лагере есть один большой корпус для проживания. Есть комнаты, где может проживать 4 человека, а есть комнаты для шестерых. Ребёнок сам будет выбирать подходящую ему комнату, он может заселиться с друзьями или завести новых!
+        </p>
+        <img src="/assets/images/building.jpg">
+    
+    
+        <p>
+            На территории лагеря действует столовая со шведским столом! На выбор есть множество блюд. Ребёнок сам будет выбирать что ему есть. В ассортименте нашей столовой есть всё от низкоколлорийных салатов  до вкусных дессертов!
+        </p>
+        <img src="/assets/images/food.jpg">
+    
+   
+        <p>
+            В случае если ваш ребёнок заболеет или поранится во время тренировки ничего страшного! На территории лагеря размещён медецинский корпус, где его быстро поставят на ноги настоящие профессионалы своего дела.
+        </p>
+        <img src="/assets/images/meds.jpg">
+    
+</div>
