--- a/camp/src/app/buy/buy.component.html
+++ b/camp/src/app/buy/buy.component.html
@@ -28,7 +28,7 @@
         <!-- <td>баскетбол, футбол, большой теннис,гандбол, крикет</td>
         <td>плавание, лёгкая атлетика, бег, спортивное ориентирование</td>
         <td>греко-римская борьба, бокс, кик-боксинг, армейский рукопашный бой, военно-тактические игры( страйкбол, пейнтбол )</td>
-        <td>кёрлинг, хокей, горные лыжи, сноубординг, фигурное катание, саллом</td> -->
+        <td>кёрлинг, хокей, горные лыжи, сноубординг, фигурное катание</td> -->
     </tr>
     <tr>
         <td>всего мест</td>
